2005-09-12  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-session.c (sbuild_session_setup_chroot): Call
	sbuild_chroot_setup to get chroot environment variables, and add
	additional auth environment variables to the same linked list.
	Convert the linked list into a vector.

	* schroot/sbuild-chroot.c (sbuild_chroot_print_details): Call
	print_details vfunc.
	(sbuild_chroot_setup): New function, used to set the environment
	in setup scripts.  It calls the setup vfunc to allow derived
	classes to set additional environment variables.

	* schroot/sbuild-chroot.h:
	(struct _SbuildChrootClass): New print_details and setup virtual
	functions.

2005-09-11  Roger Leigh  <rleigh@debian.org>

	* Fixed minor typos in API reference.

	* Updated TODO.

2005-09-11  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-session.c (sbuild_session_setup_chroot): Set
	AUTH_VERBOSITY, not AUTH_VERBOSE.

	* schroot/setup/50chrootname: Use $AUTH_VERBOSITY.

	* schroot/setup/30passwd: Use $AUTH_VERBOSITY.

	* schroot/setup/20network: Use $AUTH_VERBOSITY.

	* schroot/schroot.c (main): Fix pointer type warning.

2005-09-11  Roger Leigh  <rleigh@debian.org>

	* Update API reference.

	* schroot/schroot.1.in: Document new option, and the
	AUTH_VERBOSITY environment variable used in setup scripts.

	* schroot/schroot.c
	(parse_options): Add a new --verbose option.
	(main): Set requested verbosity level.

	* schroot/sbuild-session.c
	(sbuild_session_setup_chroot): Check verbosity level to set in the
	environment, and to pass to run-parts.
	(sbuild_session_run_child): Check verbosity level when printing
	information about the command being run.

	* schroot/sbuild-auth.c
	(sbuild_auth_get_verbosity): Replacement for
	sbuild_auth_get_quiet.
	(sbuild_auth_set_verbosity): Replacement for
	sbuild_auth_set_quiet.
	(sbuild_auth_class_init): Replace "quiet" property with
	"verbosity" property.

	* schroot/sbuild-auth.h:
	Add SbuildAuthVerbosity enum to specify	message verbosity.